name:                bitcoin-blobchain
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/runeksvendsen/bitcoin-blobchain#readme
license:             BSD3
license-file:        LICENSE
author:              Rune K. Svendsen
maintainer:          runesvend@gmail.com
copyright:           2016 Rune K. Svendsen
category:            Finance Network Bitcoin
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable btc-blobchain
  hs-source-dirs:      src
  exposed-modules:     Lib
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                   ,   zeromq4-haskell
                   ,   gitlib
                   ,   haskoin-core
                   ,   cereal
                   ,   bytestring



source-repository head
  type:     git
  location: https://github.com/runeksvendsen/bitcoin-blobchain
